# LeaveFlow

./: .env.example  .gitignore  README.md  docker-compose.yml
_bmad/: config.toml  config.user.toml
_bmad-output/implementation-artifacts/: 1-1-project-foundation-and-reproducible-setup.md  1-2-log-in-and-receive-a-session.md  1-3-carry-the-session-on-every-request.md  1-4-authorization-primitives-the-role-gate-scoped-reads-and-the-404-convention.md  1-5-manage-departments.md  1-6-manage-employees-and-reporting-lines.md  1-7-scope-authority-to-the-reporting-relationship.md  1-8-edit-my-own-name.md  2-1-leave-types-as-configuration.md  2-10-the-leave-year-rollover.md  2-11-a-holiday-change-recalculates-and-may-be-refused.md  2-12-change-leave-policy-with-an-explicit-disposition.md  2-2-the-company-holiday-calendar.md  2-3-the-leave-day-count-one-implementation-nowhere-else.md  2-4-leave-balances-three-quantities-one-derived.md  2-5-see-what-a-request-will-cost-before-committing-to-it.md  2-6-submit-a-leave-request.md  2-7-decide-a-request-approve-reject-cancel.md  2-8-cancel-approved-leave-through-a-cancellation-request.md  2-9-the-audit-trail.md  3-1-my-leave-history-filtered-and-bounded.md  3-2-my-team.md  3-3-the-department-leave-calendar-at-the-moment-of-decision.md  3-4-in-app-notifications.md  3-5-a-dashboard-per-role.md  4-1-attach-a-supporting-document.md  4-2-export-leave-as-csv.md  deferred-work.md  spec-design-system-foundation-shell.md  spec-fix-leave-type-edit-save.md  spec-logout.md  sprint-status.yaml
_bmad-output/planning-artifacts/: epics.md  implementation-readiness-report-2026-07-10.md
_bmad-output/planning-artifacts/module-1-business-analysis/: assumptions-and-constraints.md  brd.md  functional-requirements.md  non-functional-requirements.md  problem-statement.md  stakeholder-analysis.md
_bmad-output/planning-artifacts/module-4-erd/: erd.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline_baseline_no_domain_table_ac6_ad_11.py  0002_department_and_employee.py  0003_leave_type.py  0004_company_holiday.py  0005_leave_balance.py  0006_leave_request.py  0007_cancellation_request.py  0008_audit_read_surface.py  0009_rollover_run.py  0010_admin_review_flag.py  0011_policy_change.py  0012_notification.py  0013_supporting_document.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  admin_review_flags.py  audit_entries.py  auth.py  balances.py  calendar.py  cancellation_requests.py  dashboard.py  departments.py  dependencies.py  documents.py  employees.py  errors.py  health.py  holidays.py  leave_requests.py  leave_types.py  me.py  notifications.py  pagination.py  policy_changes.py  reports.py  router.py  team.py
backend/app/core/: __init__.py  logging.py  security.py  settings.py
backend/app/domain/: __init__.py  calendar.py  carry_forward.py  errors.py  leave_request_rules.py  proration.py  recalculation.py  vocabulary.py
backend/app/jobs/: __init__.py  rollover.py
backend/app/repositories/: __init__.py  admin_review_flag.py  audit_entry.py  base.py  cancellation_request.py  dashboard.py  department.py  employee.py  engine.py  holiday.py  leave_balance.py  leave_request.py  leave_type.py  models.py  notification.py  policy_change.py  rollover_run.py  scoping.py  supporting_document.py
backend/app/services/: __init__.py  admin_review_flags.py  audit.py  auth.py  authorization.py  balance_reads.py  balances.py  calendar.py  cancellation.py  dashboard.py  departments.py  documents.py  employee.py  holidays.py  leave_requests.py  leave_types.py  me.py  notifications.py  policy_changes.py  recalculation.py  reports.py  rollover.py  team.py
backend/seed/: __init__.py  __main__.py
backend/tests/: test_architecture.py  test_balances_module_surface.py  test_error_envelope.py  test_frontend_no_client_day_count.py  test_health.py  test_migrations_insert_nothing.py  test_pagination.py  test_reporting_cycle.py  test_rollover_has_no_http_surface.py  test_scope_matrix.py  test_scoped_getters.py  test_vocabulary_literals.py
backend/tests/domain/: conftest.py  test_authenticate_no_shortcircuit.py  test_authorization.py  test_calendar.py  test_cancellation_scope_for_role.py  test_carry_forward.py  test_excluded_dates.py  test_leave_request_rules.py  test_proration.py  test_recalculation.py  test_resolve_actor_rejections.py  test_scope_for_role.py  test_scoping.py
backend/tests/integration/: conftest.py  test_audit_entries.py  test_balances_materialization.py  test_balances_mutation.py  test_balances_read.py  test_cancellation_request.py  test_dashboard.py  test_department_calendar.py  test_departments.py  test_employees.py  test_holiday_recalculation.py  test_holidays.py  test_leave_report_csv.py  test_leave_request_decide.py  test_leave_request_history.py  test_leave_request_preview.py  test_leave_request_submit.py  test_leave_types.py  test_login.py  test_manager_scope.py  test_me.py  test_migration_smoke.py  test_model_migration_agreement.py  test_notifications.py  test_policy_change.py  test_role_gate.py  test_rollover.py  test_schema_1_2.py  test_seed.py  test_supporting_document.py  test_team.py
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.test.json  vercel.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx
frontend/src/api/: adminReviewFlags.ts  auditEntries.ts  auth.ts  balances.ts  calendar.ts  cancellationRequests.ts  client.ts  dashboard.ts  departments.ts  documents.ts  employees.ts  health.ts  holidays.ts  index.ts  leaveRequests.ts  leaveTypes.ts  me.ts  notifications.ts  policyChanges.ts  queryClient.ts  recalculation.ts  reports.ts  session.test.ts  session.ts  team.ts
frontend/src/components/: Pager.tsx  README.md  (+1 more)
proxy/: Dockerfile  entrypoint.sh  nginx.conf
(+78 files in other folders)
